# GraphicsDisplayWidget

./: .gitignore  CMakeLists.txt  GraphicsDisplayWidget.cpp  GraphicsDisplayWidget.h  GraphicsDisplayWidget.qrc  GraphicsDisplayWidget.sln  GraphicsDisplayWidget.vcxproj  GraphicsDisplayWidget.vcxproj.filters  MovableCircle.cpp  MovableCircle.h  MoveItem.cpp  MoveItem.h  ResizeableTopWidget.cpp  ResizeableTopWidget.h  ResizeableWidget.cpp  ResizeableWidget.h  SelectionWidget.cpp  SelectionWidget.h  XThread.cpp  XThread.h  XTools.cpp  camera.h  canvas_background_item.cpp  canvas_background_item.h  canvas_display_item.cpp  canvas_display_item.h  canvas_item.cpp  canvas_item.h  canvas_item_group.cpp  canvas_item_group.h  canvas_scene.cpp  canvas_scene.h  canvas_view.cpp  canvas_widget.cpp  canvas_widget.h  capture_thread.cpp  capture_thread.h  capture_view.h  capture_widget.h  capturer.cpp  (+9 more)
forms/: GraphicsDisplayWidget.qrc  GraphicsDisplayWidget.ui
src/: main.cpp
src/camera/: cam_cap_thread.cpp  cam_cap_thread.h  camera_test.cpp  camera_test.h  capturethread.cpp  qtcamera.h  webcam.cpp
src/canvas/: ResizeableWidget.h  canvas_display_item.cpp  canvas_header.h  canvas_item.h  canvas_item_group.cpp  canvas_item_group.h  canvas_scene.cpp  canvas_scene.h  canvas_view.cpp  canvas_view.h  canvas_widget.cpp
src/capture/: capture_thread.cpp  capture_thread.h  capturer.cpp  capturer.h
src/capture_ui/: capture_item.cpp  capture_item.h  capture_view.cpp  capture_widget.cpp
src/move_item_test/: my_proxy_widget.cpp  my_proxy_widget.h
src/test/: ImageDisplayItem.cpp  ImageDisplayItem.h
src/tools/: XTools.h
src/widget/: GraphicsDisplayWidget.cpp  GraphicsDisplayWidget.h  ResizeableTopWidget.cpp
